[gd_scene load_steps=5 format=2]

[ext_resource path="res://Themes/BaseUITheme.tres" type="Theme" id=1]
[ext_resource path="res://Fonts/BigUIFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://UI/PauseMenu/PauseMenu.gd" type="Script" id=3]
[ext_resource path="res://UI/OptionsMenu/OptionsMenu.tscn" type="PackedScene" id=4]

[node name="PauseMenu" type="PanelContainer"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -178.5
margin_top = -196.0
margin_right = 178.5
margin_bottom = 196.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="PauseVBoxContainer" type="VBoxContainer" parent="."]
pause_mode = 2
margin_left = 7.0
margin_top = 7.0
margin_right = 377.0
margin_bottom = 428.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 60
alignment = 1

[node name="TitleLabel" type="Label" parent="PauseVBoxContainer"]
pause_mode = 2
margin_right = 370.0
margin_bottom = 88.0
custom_fonts/font = ExtResource( 2 )
text = "PAUSE_TEXT"
align = 1
valign = 1

[node name="Continue" type="Button" parent="PauseVBoxContainer"]
pause_mode = 2
margin_top = 148.0
margin_right = 370.0
margin_bottom = 199.0
text = "PAUSE_CONTINUE"

[node name="Options" type="Button" parent="PauseVBoxContainer"]
pause_mode = 2
margin_top = 259.0
margin_right = 370.0
margin_bottom = 310.0
text = "PAUSE_OPTIONS"

[node name="ExitDesktop" type="Button" parent="PauseVBoxContainer"]
pause_mode = 2
margin_top = 370.0
margin_right = 370.0
margin_bottom = 421.0
text = "PAUSE_EXIT_DESKTOP"

[node name="OptionsMenu" parent="." instance=ExtResource( 4 )]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 1913.0
margin_bottom = 1073.0

[connection signal="button_down" from="PauseVBoxContainer/Continue" to="." method="_on_Continue_button_down"]
[connection signal="button_down" from="PauseVBoxContainer/Options" to="." method="_on_Options_button_down"]
[connection signal="button_down" from="PauseVBoxContainer/ExitDesktop" to="." method="_on_Exit_desktop_button_down"]
